# angybot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: check.yml  publish.yml  release.yml  test.yml
src/: config.rs  error.rs  handler.rs  main.rs  options.rs  plex.rs  schema.rs
src/handler/: mod.rs
src/handler/commands/: mod.rs  play.rs  stop.rs  summon.rs  unknown.rs
