[package]
name = "angybot"
version = "0.2.1"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
edition = "2021"
description = "A Discord bot for playing back music in funny ways"
readme = "README.md"
repository = "https://github.com/RYGhub/angybot"
license = "AGPL-3.0-or-later"
keywords = ["discord", "discord-bot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "^1.0.188"
features = ["derive"]

[dependencies.reqwest]
version = "^0.11.20"
features = ["json"]

[dependencies.serenity]
version = "~0.11.5"
default-features = false
features = [
    "client",
    "cache",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
]

[dependencies.tokio]
version = "^1.6.1"
features = [
    "full",
]

[dependencies.songbird]
version = "^0.3.2"
features = [
    "serenity-rustls",
    "yt-dlp",
]

[dependencies.log]
version = "^0.4.17"

[dependencies.pretty_env_logger]
version = "0.5.0"

[dependencies.lazy_static]
version = "^1.4.0"
